@@ -1,5 +1,7 @@
 2019-09-25  Sam Varshavchik  <mrsam@courier-mta.com>
 
+	* Add create_ok2_cancel_dialog.
+
 	* remove_item() did not work correctly in a combo-box.
 
 2019-09-22  Sam Varshavchik  <mrsam@courier-mta.com>
